<resources>
    <string name="app_name">TPRIS-3</string>
    <string name="name_of_book">name of book</string>
    <string name="author_of_book">author</string>
    <string name="price">price</string>
    <string name="year">year</string>
    <string name="code">code</string>
    <string name="count">count</string>
    <string name="add">Add</string>
    <string name="edit">edit</string>
    <string name="delete">delete</string>
    <string name="sort">sort</string>
    <string name="search">search</string>
</resources>
