<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp">

    <EditText
        android:id="@+id/ename_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/name_of_book"/>


    <EditText
        android:id="@+id/eauthor_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/author_of_book"/>


    <EditText
        android:id="@+id/eprice_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:digits="0123456789,"
        android:hint="@string/price" />

    <EditText
        android:id="@+id/eyear_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/year" />


    <EditText
        android:id="@+id/ecode_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/code" />


    <EditText
        android:id="@+id/ecount_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/count" />

    <Button
        android:id="@+id/edit_edit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit"/>

</LinearLayout>